[build-system]
requires = [
    "setuptools >= 44",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.mypy]
enable_incomplete_feature = [
    "Unpack",
]
exclude = [
    "compat.py$",
    "distlib.compat",
]
mypy_path = [
    ".",
    "./distlib",
]
packages = [
    "distlib"
]
pretty = true
strict = true

[tool.pyright]
include = [
    "distlib/*py",
    "distlib/*pyi",
]
ignore = [
    "distlib/compat.py",
]
