[metadata]
name = distlib
version = attr: distlib.__version__
description = Distribution utilities
long_description = file: README.rst
url = https://github.com/pypa/distlib
author = Vinay Sajip
author_email = vinay_sajip@red-dove.com
license = Python license
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
project_urls =
    Documentation = https://distlib.readthedocs.io/
    Source = https://github.com/pypa/distlib
    Tracker = https://github.com/pypa/distlib/issues
platforms = any

[options]
packages = distlib
include_package_data = True

[bdist_wheel]
universal = 1
